--- a/html/style.css
+++ b/html/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: myFirstFont;
-    src: url(sansation_light.woff);
-}
-
-div {
-    font-family: myFirstFont;
+.dream {
+    font-family: Adler;
 }
